--- a/gemini_calendar_sync/templates/index.html
+++ b/gemini_calendar_sync/templates/index.html
@@ -67,7 +67,7 @@
                 <div class="mt-3">
                     <div class="mb-3">
                         <label for="calendar-name" class="form-label">Calendar Name</label>
-                        <input type="text" class="form-control" id="calendar-name" value="Sports Calendar">
+                        <input type="text" class="form-control" id="calendar-name" value="SLOHS Sports Calendar">
                     </div>
                     <button id="apply-changes" class="btn btn-success">Apply to Calendar</button>
                 </div>
